syntax = "proto3";

import "google/protobuf/empty.proto";

package cosmos_notifier_grpc;

option go_package = "github.com/shifty11/cosmos-notifier/services/grpc/protobuf/auth_service";

service AuthService {
  rpc TelegramLogin (TelegramLoginRequest) returns (LoginResponse) {}
  rpc DiscordLogin (DiscordLoginRequest) returns (LoginResponse) {}
  rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse) {}
  rpc CannySSO (google.protobuf.Empty) returns (CannySSOResponse) {}
}

message TelegramLoginRequest {
  int64 userId = 1;
  string dataStr = 2;
  string username = 4;
  int64 authDate = 6;
  string hash = 3;
}

message DiscordLoginRequest {
  string code = 1;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshAccessTokenRequest {
  string refresh_token = 1;
}

message RefreshAccessTokenResponse {
  string access_token = 1;
}

message CannySSOResponse {
  string access_token = 1;
}